--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
         </nav>
     </header>
     <!-- empty div changed to section(semantic HTML element) with img tag  -->
-    <section class="hero">
-        <img src="./assets/images/digital-marketing-meeting.jpg" alt="marketing image">
-    </section>
+    <section class="hero"></section>
     <!-- div changed to main(semantic HTML element) -->
     <main class=" content">
         <!-- div changed to section and class changed to content-item -->
